[workspace]
resolver = "2"
members = [
    "fluxion",
    "fluxion-core",
    "fluxion-ordered-merge",
    "fluxion-stream",
    "fluxion-exec",
    "fluxion-test-utils",
    "fluxion-stream-time",
    "examples/stream-aggregation",
    "examples/legacy-integration",
]

[workspace.package]
version = "0.6.7"
edition = "2021"
authors = ["umberto.gotti@umbertogotti.dev"]
license = "Apache-2.0"
repository = "https://github.com/umbgtt10/fluxion"

[workspace.dependencies]
# Stream utilities
futures = "0.3.31"
futures-util = "0.3.31"
tokio = { version = "1.48.0", features = ["full", "test-util"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
tokio-util = "0.7.17"
pin-project = "1.1.10"
async-trait = "0.1.89"
async-stream = "0.3.6"
async-io = "2.6.0"
# ⚠️ DEPRECATED: async-std is unmaintained (RUSTSEC-2025-0052)
# Kept for compatibility only; new projects should use tokio or smol
async-std = { version = "1.13", features = ["attributes"] }
smol = "2.0"

quick-xml = { version = "0.38.4", features = ["serialize"] }
csv = "1.4"
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
fastrand = "2.3.0"

# Synchronization
parking_lot = "0.12.5"
event-listener = "5.4"

# Logging
tracing = "0.1.44"

# Error handling
thiserror = "2.0.17"
anyhow = "1.0.100"

# Bench & testing utilities
criterion = { version = "0.7.0", features = ["async", "html_reports"] }

# WASM support
gloo-timers = "0.3"
js-sys = "0.3"
wasm-bindgen-test = "0.3"
wasm-bindgen-futures = "0.4"

# Platform bindings (unify versions across workspace)
windows-sys = "0.61.2"

# Internal workspace dependencies
fluxion-rx = { version = "0.6.7", path = "fluxion" }
fluxion-core = { version = "0.6.7", path = "fluxion-core" }
fluxion-ordered-merge = { version = "0.6.7", path = "fluxion-ordered-merge" }
fluxion-stream = { version = "0.6.7", path = "fluxion-stream" }
fluxion-exec = { version = "0.6.7", path = "fluxion-exec" }
fluxion-test-utils = { version = "0.6.7", path = "fluxion-test-utils" }
fluxion-stream-time = { version = "0.6.7", path = "fluxion-stream-time" }
