[workspace]
resolver = "2"
members = [
    "fluxion",
    "fluxion-core",
    "fluxion-ordered-merge",
    "fluxion-stream",
    "fluxion-exec",
    "fluxion-test-utils",
    "fluxion-stream-time",
    "examples/stream-aggregation",
    "examples/legacy-integration",
]

[workspace.package]
version = "0.6.13"
edition = "2021"
authors = ["umberto.gotti@umbertogotti.dev"]
license = "Apache-2.0"
repository = "https://github.com/umbgtt10/fluxion"

[workspace.dependencies]
# Stream utilities
futures = { version = "0.3.31", default-features = false, features = ["alloc"] }
futures-util = { version = "0.3.31", default-features = false, features = ["alloc"] }
futures-channel = { version = "0.3.31", default-features = false, features = ["alloc"] }
tokio = { version = "1.48.0", default-features = false, features = ["macros", "time", "rt-multi-thread"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
tokio-util = "0.7.17"
pin-project = "1.1.10"
async-trait = "0.1.89"
async-stream = "0.3.6"
async-io = "2.6.0"
# ⚠️ DEPRECATED: async-std is unmaintained (RUSTSEC-2025-0052)
# Kept for compatibility only; new projects should use tokio or smol
async-std = { version = "1.13", features = ["attributes"] }
smol = "2.0"
embassy-time = "0.5.0"

quick-xml = { version = "0.38.4", features = ["serialize"] }
csv = "1.4"
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
fastrand = { version = "2.3.0", default-features = false }

# Synchronization
parking_lot = { version = "0.12.1", default-features = false }
event-listener = { version = "5.4", default-features = false }

# Logging
tracing = { version = "0.1.44", default-features = false }

# Error handling
thiserror = "2.0.17"
anyhow = "1.0.100"

# Bench & testing utilities
criterion = { version = "0.7.0", features = ["async", "html_reports"] }

# WASM support
gloo-timers = "0.3"
js-sys = "0.3"
wasm-bindgen-test = "0.3"
wasm-bindgen-futures = "0.4"

# Internal workspace dependencies
fluxion-rx = { version = "0.6.13", path = "fluxion" }
fluxion-core = { version = "0.6.13", path = "fluxion-core", default-features = false }
fluxion-ordered-merge = { version = "0.6.13", path = "fluxion-ordered-merge" }
fluxion-stream = { version = "0.6.13", path = "fluxion-stream" }
fluxion-exec = { version = "0.6.13", path = "fluxion-exec" }
fluxion-test-utils = { version = "0.6.13", path = "fluxion-test-utils" }
fluxion-stream-time = { version = "0.6.13", path = "fluxion-stream-time" }
