[package]
name = "fluxion-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

description = "Core traits and types for ordered stream processing"
keywords = ["async", "stream", "ordered", "trait", "core"]
categories = ["asynchronous", "concurrency"]
readme = "README.md"

[package.metadata.cargo-udeps]
ignore = { normal = ["tracing", "async-std", "smol"] }

[dependencies]
futures = { workspace = true, features = ["alloc", "async-await"] }
parking_lot = { workspace = true }
event-listener = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true, optional = true }

# Runtime dependencies (optional, feature-gated)
# Note: tokio for non-WASM only, smol/async-std available for both
smol = { workspace = true, optional = true }
async-std = { workspace = true, optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true, optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
# wasm-bindgen-futures must NOT be optional due to wasm-pack limitations
wasm-bindgen-futures = { workspace = true }

[features]
default = ["std", "runtime-tokio"]
std = ["futures/std", "parking_lot/send_guard", "event-listener/std"]
alloc = ["futures/alloc", "futures/async-await"]

# Tracing support
tracing = ["dep:tracing"]

# Runtime feature flags (each implies alloc)
runtime-tokio = ["std", "dep:tokio"]
runtime-smol = ["std", "dep:smol"]
runtime-async-std = ["std", "dep:async-std"]
# runtime-wasm doesn't need a feature flag since wasm-bindgen-futures is always available on WASM

[dev-dependencies]
[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tokio = { workspace = true }
criterion = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = { workspace = true }

[[bench]]
name = "benchmarks"
harness = false
