[package]
name = "fluxion-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

description = "Core traits and types for ordered stream processing"
keywords = ["async", "stream", "ordered", "trait", "core"]
categories = ["asynchronous", "concurrency"]
readme = "README.md"

[package.metadata.cargo-udeps]
ignore = { normal = ["tracing", "async-std", "smol"] }

[dependencies]
futures = { workspace = true, default-features = false, features = ["alloc", "async-await"] }
futures-channel = { workspace = true, default-features = false, features = ["alloc", "sink"] }
event-listener = { workspace = true, default-features = false, features = ["portable-atomic"] }
tracing = { workspace = true, optional = true, default-features = false }

# FluxionSubject dependencies (std-only)
parking_lot = { workspace = true, optional = true }
spin = { version = "0.9.8", default-features = false, features = ["mutex", "spin_mutex"] }

# Runtime dependencies (optional, feature-gated)
# Note: tokio for non-WASM only, smol/async-std available for both
smol = { workspace = true, optional = true }
async-std = { workspace = true, optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true, optional = true, features = ["rt"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
# wasm-bindgen-futures must NOT be optional due to wasm-pack limitations
wasm-bindgen-futures = { workspace = true }

[features]
default = ["std", "runtime-tokio"]
std = ["futures/std", "futures/executor", "event-listener/std", "dep:parking_lot"]
alloc = []

# Tracing support
tracing = ["dep:tracing"]

# Runtime feature flags (each implies alloc)
runtime-tokio = ["std", "dep:tokio"]
runtime-smol = ["std", "dep:smol"]
runtime-async-std = ["std", "dep:async-std"]
# runtime-wasm doesn't need a feature flag since wasm-bindgen-futures is always available on WASM

[dev-dependencies]
thiserror = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tokio = { workspace = true }
criterion = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = { workspace = true }

[[bench]]
name = "benchmarks"
harness = false
