[package]
name = "fluxion-exec"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

description = "Async stream subscribers and execution utilities for fluxion"
keywords = ["async", "stream", "reactive", "subscribe", "executor"]
categories = ["asynchronous", "concurrency"]

[dependencies]
fluxion-core = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true, optional = true }

[dev-dependencies]
fluxion-test-utils = { workspace = true }
tokio-stream = { workspace = true }
thiserror = { workspace = true }

[features]
default = []
tracing = ["dep:tracing"]
