[package]
name = "fluxion-exec"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

description = "Async stream subscribers and execution utilities for fluxion"
keywords = ["async", "stream", "reactive", "subscribe", "executor"]
categories = ["asynchronous", "concurrency"]
readme = "README.md"

[dependencies]
fluxion-core = { workspace = true, features = ["std"] }
futures = { workspace = true }
parking_lot = { workspace = true }
event-listener = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true, optional = true }

[dev-dependencies]
fluxion-test-utils = { workspace = true }
tokio-stream = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

[features]
default = ["std", "runtime-tokio"]
std = [
    "fluxion-core/std",
    "futures/std",
    "parking_lot/send_guard",
    "event-listener/std"
]
alloc = ["fluxion-core/alloc"]

# Runtime features (for subscribe_latest)
runtime-tokio = ["std", "fluxion-core/runtime-tokio"]
runtime-smol = ["std", "fluxion-core/runtime-smol"]
runtime-async-std = ["std", "fluxion-core/runtime-async-std"]
