[package]
name = "fluxion-merge"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bench]]
name = "benchmarks"
harness = false

[dependencies]
fluxion-ordered-merge.workspace = true
fluxion-test-utils.workspace = true
futures.workspace = true
futures-util.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
pin-project.workspace = true

[dev-dependencies]
fluxion-test-utils.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
criterion = { version = "0.7.0", features = ["async"] }
