
[package]
name = "fluxion-ordered-merge"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

description = "Generic ordered stream merging utilities for async Rust"
keywords = ["async", "stream", "merge", "ordered", "futures"]
categories = ["asynchronous", "concurrency"]
readme = "README.md"

[package.metadata.cargo-udeps.ignore]
normal = ["pin-project"]

[dependencies]
futures = { workspace = true, default-features = false, features = ["alloc"] }
pin-project = { workspace = true }

[dev-dependencies]
async-channel = { workspace = true }
criterion = { workspace = true }
fluxion-test-utils = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }

[[bench]]
name = "benchmarks"
harness = false
