[package]
name = "fluxion-runtime"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

description = "Runtime abstraction for async Rust streams"
keywords = ["async", "runtime", "reactive", "combinators", "futures"]
categories = ["asynchronous", "concurrency"]
readme = "README.md"

[dependencies]
fluxion-core = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
tokio = { workspace = true, optional = true, features = ["rt", "sync", "macros"] }
spin = { workspace = true, features = ["mutex", "spin_mutex"] }
parking_lot = { workspace = true, optional = true }
embassy-time = { workspace = true, optional = true }
async-io = { workspace = true, optional = true }

wasm-bindgen = { workspace = true, optional = true }
wasm-bindgen-futures = { workspace = true, optional = true }
gloo-timers = { workspace = true, features = ["futures"], optional = true }
js-sys = { workspace = true, optional = true }

[features]
default = ["std", "runtime-tokio"]
std = [
    "futures/std",
    "futures-util/std",
]
alloc = ["fluxion-core/alloc"]

runtime-tokio = ["std", "dep:parking_lot", "dep:tokio", "fluxion-core/runtime-tokio"]
runtime-wasm = ["dep:wasm-bindgen", "dep:parking_lot", "dep:wasm-bindgen-futures", "dep:gloo-timers", "dep:js-sys"]
runtime-embassy = ["alloc", "dep:embassy-time"]
runtime-smol = ["std", "dep:async-io"]
runtime-async-std = ["std", "dep:async-io"]
