[package]
name = "fluxion-stream-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core stream operator implementations for Fluxion - runtime-agnostic"

[lib]
doctest = false

[features]
default = ["std"]
std = ["fluxion-core/std", "futures/std"]
alloc = ["fluxion-core/alloc"]

[dependencies]
fluxion-core = { path = "../fluxion-core", version = "0.7.0", default-features = false, features = ["alloc"] }
fluxion-runtime = { path = "../fluxion-runtime", version = "0.7.0", default-features = false }
fluxion-ordered-merge = { path = "../fluxion-ordered-merge", version = "0.7.0", default-features = false }
fastrand = { workspace = true, default-features = false }
futures = { workspace = true }
pin-project = { workspace = true }
