[package]
name = "fluxion-stream-single"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Fluxion stream operators for single-threaded runtimes (Embassy, WASM)"

[lib]
doctest = false

[features]
default = ["runtime-embassy"]
runtime-embassy = ["fluxion-runtime/runtime-embassy", "fluxion-core/alloc"]
runtime-wasm = ["fluxion-runtime/runtime-wasm", "fluxion-core/alloc"]

[dependencies]
fluxion-core = { path = "../fluxion-core", version = "0.7.0", default-features = false, features = ["alloc"] }
fluxion-runtime = { path = "../fluxion-runtime", version = "0.7.0", default-features = false }
fluxion-stream-core = { path = "../fluxion-stream-core", version = "0.7.0", default-features = false, features = ["alloc"] }
fluxion-ordered-merge = { path = "../fluxion-ordered-merge", version = "0.7.0", default-features = false }
futures = { workspace = true }
pin-project = { workspace = true }
async-channel = { workspace = true, default-features = false }
