[package]
name = "fluxion-stream-time"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

description = "Time-based operators extending fluxion-stream with monotonic timestamps"
keywords = ["async", "stream", "time", "debounce", "throttle"]
categories = ["asynchronous", "concurrency", "date-and-time"]
readme = "README.md"

[package.metadata.cargo-udeps.ignore]
development = ["async-std", "smol", "tokio-stream"]

[dependencies]
fluxion-core = { workspace = true, default-features = false, features = ["alloc"] }
futures = { workspace = true, default-features = false, features = ["alloc"] }
tracing = { workspace = true, optional = true, default-features = false }
pin-project = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true }
async-io = { workspace = true, optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-timers = { workspace = true, optional = true, features = ["futures"] }
js-sys = { workspace = true, optional = true }

[features]
default = ["std", "runtime-tokio"]
std = ["fluxion-core/std", "futures/std"]
alloc = ["fluxion-core/alloc"]

# Runtime features require std
runtime-tokio = ["std"]
runtime-async-std = ["std", "dep:async-io"]
runtime-smol = ["std", "dep:async-io"]
runtime-wasm = ["std", "dep:gloo-timers", "dep:js-sys"]
tracing = ["dep:tracing", "fluxion-core/tracing"]

[dev-dependencies]
anyhow = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
async-std = { workspace = true }
smol = { workspace = true }
fluxion-stream = { workspace = true }
fluxion-test-utils = { workspace = true }
tokio-stream = { workspace = true }  # Used in doc examples
criterion = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = { workspace = true }

[[bench]]
name = "benchmarks"
harness = false

