[package]
name = "fluxion-stream-time"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

description = "Time-based operators extending fluxion-stream with monotonic timestamps"
keywords = ["async", "stream", "time", "debounce", "throttle"]
categories = ["asynchronous", "concurrency", "date-and-time"]
readme = "README.md"

[package.metadata.cargo-udeps.ignore]
development = ["async-std", "smol", "tokio-stream"]

[dependencies]
fluxion-core = { workspace = true, default-features = false, features = ["alloc"] }
futures = { workspace = true, default-features = false, features = ["alloc"] }
pin-project = { workspace = true }
embassy-time = { workspace = true, optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true, optional = true, features = ["time", "sync"] }
async-io = { workspace = true, optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-timers = { workspace = true, optional = true, features = ["futures"] }
js-sys = { workspace = true, optional = true }

[features]
default = ["std", "runtime-tokio"]
std = ["fluxion-core/std", "futures/std"]
alloc = ["fluxion-core/alloc"]

# Runtime features
runtime-tokio = ["std", "dep:tokio"]
runtime-async-std = ["std", "dep:async-io"]
runtime-smol = ["std", "dep:async-io"]
runtime-wasm = ["std", "dep:gloo-timers", "dep:js-sys"]
runtime-embassy = ["alloc", "dep:embassy-time"]

[dev-dependencies]
anyhow = { workspace = true }
# Embassy executor and timer with software queue for testing
embassy-executor = { version = "0.6", features = ["nightly", "arch-std", "executor-thread"] }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
async-std = { workspace = true }
smol = { workspace = true }
fluxion-stream = { workspace = true }
fluxion-test-utils = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }  # Used in doc examples
criterion = { workspace = true }
async-channel = { workspace = true }
# Embassy time with std driver and generic queue for no-hardware testing
embassy-time = { workspace = true, features = ["std", "generic-queue-8"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = { workspace = true }

[[bench]]
name = "benchmarks"
harness = false

