[package]
name = "fluxion-stream"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

description = "Stream combinators with ordering guarantees for async Rust"
keywords = ["async", "stream", "reactive", "combinators", "futures"]
categories = ["asynchronous", "concurrency"]
readme = "README.md"

[dependencies]
fluxion-core = { workspace = true }
fluxion-ordered-merge = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
tokio = { workspace = true }
parking_lot = { workspace = true }
pin-project = { workspace = true }
fastrand = { workspace = true }
tracing = { workspace = true, optional = true }

[features]
default = ["std", "runtime-tokio"]
std = [
    "fluxion-core/std",
    "fluxion-core/alloc",
    "futures/std",
    "futures-util/std",
    "parking_lot/send_guard"
]
alloc = ["fluxion-core/alloc"]

# Tracing support
tracing = ["dep:tracing"]

# Runtime features (for spawn-based operators)
runtime-tokio = ["std", "fluxion-core/runtime-tokio"]
runtime-smol = ["std", "fluxion-core/runtime-smol"]
runtime-async-std = ["std", "fluxion-core/runtime-async-std"]

[dev-dependencies]
fluxion-test-utils = { workspace = true }
criterion = { workspace = true }
anyhow = { workspace = true }

[[bench]]
name = "benchmarks"
harness = false
