[package]
name = "fluxion-stream"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

description = "Stream combinators with ordering guarantees for async Rust - facade crate"
keywords = ["async", "stream", "reactive", "combinators", "futures"]
categories = ["asynchronous", "concurrency"]
readme = "README.md"

[dependencies]
fluxion-stream-multi = { workspace = true, optional = true }
fluxion-stream-single = { workspace = true, optional = true }

[features]
default = ["multi"]

# Runtime selection - mutually exclusive
multi = ["dep:fluxion-stream-multi"]
single = ["dep:fluxion-stream-single"]

# Convenience aliases
embassy = ["single"]
wasm = ["single"]
tokio = ["multi"]
smol = ["multi"]
async-std = ["multi"]

# Pass-through for compatibility (map to multi/single appropriately)
std = ["multi"]
alloc = []  # Both multi and single support alloc by default
tracing = []  # Not used by facade

# Pass-through features for multi
runtime-tokio = ["multi", "fluxion-stream-multi?/runtime-tokio"]
runtime-smol = ["multi", "fluxion-stream-multi?/runtime-smol"]
runtime-async-std = ["multi", "fluxion-stream-multi?/runtime-async-std"]

[target.'cfg(not(target_os = "none"))'.dev-dependencies]
tokio = { workspace = true }
fluxion-test-utils = { workspace = true }
fluxion-core = { workspace = true }
async-channel = { workspace = true }
futures = { workspace = true }
criterion = { workspace = true }
anyhow = { workspace = true }

[[bench]]
name = "benchmarks"
harness = false
