[package]
name = "fluxion-stream"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

description = "Stream combinators with ordering guarantees for async Rust"
keywords = ["async", "stream", "reactive", "combinators", "futures"]
categories = ["asynchronous", "concurrency"]
readme = "README.md"

[dependencies]
fluxion-core = { workspace = true, default-features = false, features = ["alloc"] }
fluxion-ordered-merge = { workspace = true }
futures = { workspace = true, default-features = false, features = ["alloc", "async-await"] }
futures-util = { workspace = true, default-features = false, features = ["alloc"] }
tokio = { workspace = true, optional = true, features = ["rt", "sync", "macros"] }
pin-project = { workspace = true }
fastrand = { workspace = true, default-features = false }
tracing = { workspace = true, optional = true }
async-channel = { workspace = true, default-features = false, optional = true }

[features]
default = ["std", "runtime-tokio"]
std = [
    "fluxion-core/std",
    "fluxion-core/alloc",
    "futures/std",
    "futures-util/std",
    "dep:async-channel",
    "async-channel?/std",
]
alloc = ["fluxion-core/alloc", "dep:async-channel"]

# Tracing support
tracing = ["dep:tracing"]

# Runtime features (for spawn-based operators like subscribe_async)
runtime-tokio = ["std", "dep:tokio", "fluxion-core/runtime-tokio"]
runtime-smol = ["std", "fluxion-core/runtime-smol"]
runtime-async-std = ["std", "fluxion-core/runtime-async-std"]
runtime-wasm = ["alloc", "fluxion-core/runtime-wasm"]  # WASM single-threaded runtime
runtime-embassy = ["alloc", "fluxion-core/runtime-embassy"]  # Embassy embedded runtime

[target.'cfg(not(target_os = "none"))'.dev-dependencies]
tokio = { workspace = true }
fluxion-test-utils = { workspace = true }
criterion = { workspace = true }
anyhow = { workspace = true }

[[bench]]
name = "benchmarks"
harness = false
