[package]
name = "fluxion-test-utils"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

description = "Test utilities and infrastructure for fluxion workspace"
keywords = ["testing", "async", "stream"]
categories = ["development-tools::testing"]
readme = "README.md"

[dependencies]
fluxion-core = { workspace = true, default-features = false, features = ["std", "runtime-tokio"] }
futures = { workspace = true }
tokio = { workspace = true, features = ["rt", "sync", "macros", "time", "test-util"] }
